<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:textStyle="bold"
            android:text="@string/id"/>
        <EditText
            android:id="@+id/et_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_id"
            android:textSize="@dimen/font_medium"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:textStyle="bold"
            android:text="@string/name"/>
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:textSize="@dimen/font_medium"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:textStyle="bold"
            android:text="@string/gender"/>
        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>
            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:checked="true"
                />

        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:textStyle="bold"
            android:text="@string/salary"/>
        <EditText
            android:id="@+id/et_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_salary"
            android:textSize="@dimen/font_medium"
            android:numeric="decimal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:textStyle="bold"
            android:text="@string/department"/>
        <Spinner
            android:layout_weight="1"
            android:id="@+id/spnner_department"
            android:layout_width="0dp"
            android:layout_height="wrap_content"></Spinner>
    </LinearLayout>
    <Button
        android:id="@+id/bt_register_employee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_employee"
        android:textAllCaps="false"/>
</LinearLayout>