<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="craterzone.ems.activity.MainActivity">

    <Button
        android:id="@+id/bt_add_employee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_medium"
        android:text="@string/add_employee"
        android:textStyle="bold"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/bt_show_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_medium"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:text="@string/view_employee"/>
    <Button
        android:id="@+id/bt_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/exit_bt"
        android:textStyle="bold"/>
</LinearLayout>
